[package]
name = "tri-clicker"
version = "0.1.0"
description = "A multilingual mouse and keyboard automation studio."
authors = ["Yasaki"]
edition = "2021"

[lib]
name = "tri_clicker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.8"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
